# echo

./: .envrc  .gitignore  README.md
awk/: cdf.awk  stats.awk
python/: Makefile  README.md  client.py  requirements.txt  server.py
python_async_grpc/: client.py  echo_pb2_grpc.py  server.py
python_grpc/: .envrc  Makefile  client.py  echo_pb2.py  echo_pb2.pyi  requirements.txt  server.py
results/: README.md
results/cloudlab-6nodes-rs630/medium/: python.stats  python_grpc.stats  rust_async_closed.stats  rust_sync.stats  rust_tonic_bursty.stats  rust_tonic_closed.stats  throughput.eps  throughput.gnu
results/cloudlab-6nodes-rs630/small/: python.stats  python_async_grpc.stats  python_grpc.stats  rust_async_bursty.stats  rust_async_closed.stats  rust_sync.stats  rust_tonic_bursty.stats  rust_tonic_closed.stats  throughput.eps
results/cloudlab-6nodes-rs630/tiny/: python.stats  python_async_grpc.stats  python_grpc.stats  rust_async_bursty.stats  rust_async_closed.stats  rust_sync.stats  rust_tonic_bursty.stats  rust_tonic_closed.stats  throughput.eps
results/huge/: throughput.eps
results/single/medium/: throughput.eps
results/single/small/: throughput.eps
results/tiny/: throughput.eps
rust_async/: Cargo.toml
rust_async/src/: client.rs  server.rs
rust_sync/: Cargo.toml
rust_sync/src/: client.rs  server.rs
rust_tonic/: Cargo.toml  client.rs
rust_tonic/src/: client.rs  server.rs
rust_tonic_bursty/: Cargo.toml
rust_tonic_bursty/proto/: echo.proto
rust_tonic_closed/: Cargo.toml
rust_tonic_closed/src/: client.rs  server.rs
scripts/: example_mapping.csv  gen_cdf_gnuplot.py  run.sh  seconds_from_now.sh
