[package]
name = "rust_async"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3.30"
num_cpus = "1.16.0"
parse-size = "1.0.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "std", "env-filter" ] }
