[package]
name = "rust_tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
clap = { version = "4.4.12", features = ["derive"] }
parse-size = "1.0.0"
anyhow = "1.0.79"
tracing-subscriber = "0.3.18"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.10"
